--- a/index.html
+++ b/index.html
@@ -651,10 +651,10 @@
            <div class="cont wow fadeInDown zl-timeline-style1" data-wow-duration="400ms" data-wow-delay="0ms">
              <p>
                - Testnet launch of FLASH DPOW and Gov node<br>
-                - Mainnet Launch of FLASH DPOW and GovNodes<br>
-		- Release of FLASH iOS wallet<br>
+                - Release of FLASH iOS wallet<br>
 		- Adding new features to Merchant Services<br>
-		- Regional Exchanges partnership and allow FIAT deposits and withdrawals
+		- Regional Exchanges partnership and allow FIAT deposits and withdrawals<br>
+		- Mainnet Launch of FLASH DPOW and GovNodes
              </p>
              <time>FLASH Blockchain & Applications</time>
            </div>
