--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
          <li>
            <div class="cont wow fadeInDown zl-timeline-style1" data-wow-duration="400ms" data-wow-delay="0ms">
              <p>
-               - Testnet launch of FLASH DPOW and Gov node<br>
+               - Testnet launch of FLASH DPOW and GovNodes<br>
                 - Release of FLASH iOS wallet<br>
 		- Adding new features to Merchant Services<br>
 		- Regional Exchanges partnership and allow FIAT deposits and withdrawals<br>
