--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Flashcoin | Remittances</title>
+    <title>Flashcoin | FLASH Blockchain Snapshot</title>
     <link rel="shortcut icon" href="images/favicon.ico" title="Favicon">
     <!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -39,7 +39,7 @@
                 <div class="col-sm-12 col-md-12" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="100ms">
                     <div class="section-header our-team">
-                        <h3 class="section-title wow fadeInDown">DOWNLOAD FLASHCOIN BLOCKCHAIN SNAPSHOT</h3>
+                        <h3 class="section-title wow fadeInDown">DOWNLOAD FLASH BLOCKCHAIN SNAPSHOT</h3>
                         <p class="wow fadeInDown" style="color: #414141">In which cases you need to download Flashcoin blockchain?</p>
                         <ul style="color: #414141;">
                           <li>When you need to get full Flashcoin node</li>
