New Exchange Crex24 added

--- a/index.html
+++ b/index.html
@@ -316,28 +316,38 @@
                 </div><!--/.row-->
                 <div class="row">
                 <div class="features">
-                	  <div class="col-md-6 col-sm-6 wow fadeInUp pull-left zl-wallet-img-responsive-css" data-wow-duration="300ms" data-wow-delay="400ms">
-                        <div class="media service-box zl-custom-trans" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
-                               <div class="row">
-                									<div class="col-sm-6 zl-image-hover"><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/about-flash-img-3.png" alt="img"></a></div>
-                									<div class="col-sm-6 zl-image-hover"><a href="https://crypto-bridge.org/" target="_blank"><img src="images/about-flash-img-4.png" alt="img"></a></div>
-                                  <div class="col-sm-6 zl-image-hover coinexchange"><a href="https://www.coinexchange.io/" target="_blank"><img src="images/coinexchange.png" alt="img"></a></div>
-                									<div class="col-sm-6 zl-image-hover coinexchange"><a href="https://cryptowolf.eu/" target="_blank"><img src="images/cryptowolf-exchanges.png" alt="img"></a></div>
-                               </div>
-                       </div>
-                    </div><!--/.col-md-4-->
 
-                    <div id="exchanges" class="col-md-6 col-sm-6 wow fadeInUp pull-right" data-wow-duration="300ms" data-wow-delay="300ms">
+                  <div id="exchanges" class="col-md-12 col-sm-12 wow fadeInUp pull-right" data-wow-duration="300ms" data-wow-delay="300ms">
                         <div class="media service-box">
                             <div class="media-body Exchanges zl-custom-trans" data-aos="fade-left" data-aos-offset="200" data-aos-easing="ease-in-sine">
                                <h2 class="media-heading">Exchanges</h2>
-                                <p style="color: #000">
+                                <p style="color: #000;padding-top: 1%;">
                                   FLASH supports any legal cryptocurrency exchange, including decentralized exchanges.  Our community occasionally contributes funds to get FLASH listed.   FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and because it is based on LTC, integration. If you operate an exchange and are interested in listing FLASH, please contact <a href="mailto:support@flashcoin.io" style="color: #fbb215;">support at FLASHCOIN dot io</a> to receive a file with details on our source code repo for exchanges and a legal opinion regarding FLASH’s status as a security token (it’s a community coin, not a security)
                                 </p>
 
                             </div>
                         </div>
-                    </div><!--/.col-md-6-->
+                    </div>
+
+                    <div class="col-md-12 col-sm-12 wow fadeInUp pull-left zl-wallet-img-responsive-css" data-wow-duration="300ms" data-wow-delay="400ms">
+                        <div class="media service-box zl-custom-trans" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
+                               <div class="row">
+                                 <div class="col-sm-3 zl-image-hover zl-set-column-3"></div>
+                                  <div class="col-sm-2 zl-image-hover zl-set-column-2"><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/about-flash-img-3.png" alt="img"></a></div>
+                									<div class="col-sm-2 zl-image-hover zl-set-column-2"><a href="https://crypto-bridge.org/" target="_blank"><img src="images/about-flash-img-4.png" alt="img"></a></div>
+                                  <div class="col-sm-2 zl-image-hover coinexchange zl-set-column-2"><a href="https://www.coinexchange.io/" target="_blank"><img src="images/coinexchange.png" alt="img"></a></div>
+                                  <div class="col-sm-3 zl-image-hover zl-set-column-3"></div>
+                              </div>
+                              <br>
+                              <div class="row">
+                                  <div class="col-sm-3 zl-image-hover"></div>
+                									<div class="col-sm-3 zl-image-hover coinexchange"><a href="https://cryptowolf.eu/" target="_blank"><img src="images/cryptowolf-exchanges.png" alt="img"></a></div>
+                                  <div class="col-sm-3 zl-image-hover zl-crex24-img"><a href="https://crex24.com/" target="_blank"><img src="images/crex24.png" alt="img"></a></div>
+                                  <div class="col-sm-3 zl-image-hover"></div>
+                               </div>
+                       </div>
+                    </div>
+
                 </div>
             </div><!--/.row-->
         </div><!--/.container-->
