New Exchange Crex24 added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link href="css/main.css?123" rel="stylesheet">
-    <link href="css/zluck-custom.css?345" rel="stylesheet">
+    <link href="css/main.css?568" rel="stylesheet">
+    <link href="css/zluck-custom.css?568" rel="stylesheet">
     <script src="js/jquery.js"></script>
     <script>
     $(function(){
@@ -341,7 +341,7 @@
                               <br>
                               <div class="row">
                                   <div class="col-sm-3 zl-image-hover"></div>
-                									<div class="col-sm-3 zl-image-hover coinexchange"><a href="https://cryptowolf.eu/" target="_blank"><img src="images/cryptowolf-exchanges.png" alt="img"></a></div>
+                									<div class="col-sm-3 zl-image-hover coinexchange zl-exchanges-res"><a href="https://cryptowolf.eu/" target="_blank"><img src="images/cryptowolf-exchanges.png" alt="img"></a></div>
                                   <div class="col-sm-3 zl-image-hover zl-crex24-img"><a href="https://crex24.com/" target="_blank"><img src="images/crex24.png" alt="img"></a></div>
                                   <div class="col-sm-3 zl-image-hover"></div>
                                </div>
