--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -48,9 +48,9 @@
                         </ul>
                         <h4 class="wow fadeInDown" style="color: #000;margin-top: 2em;font-size:20px;">Step 1: Download flashcoin_blockchain_snapshot file:</h4>
                         <a href="https://flashcoin.io/download/flashcoin_blockchain_snapshot_23jan2018.tar.gz" style="color: #fff;cursor: pointer;"><div class="zl-fc-snapshot-read-more-btn"><span>Download</span></div></a><br>
-                        <p class="wow fadeInDown" style="color: #000;">(<a href="https://flashcoin.io/download/flashcoin_blockchain_snapshot_23jan2018.tar.gz">https://flashcoin.io/download/flashcoin_blockchain_snapshot_23jan2018.tar.gz)</a><br>
-                          (SHA1: a7686d045822b7fee5fdc8727378952cd1e55d7f)</p>
-                          <p class="wow fadeInDown" style="color: #000;">The blockchain file has size 363Mb (348578 blocks).</p>
+                        <p class="wow fadeInDown" style="color: #000;">(<a href="https://flashcoin.io/download/flashcoin_blockchain_snapshot_29mar2018.tar.gz">https://flashcoin.io/download/flashcoin_blockchain_snapshot_29mar2018.tar.gz)</a><br>
+                          (SHA1: 1b897b2ecbbefdfa8d5411d9bc46e9971602c370)</p>
+                          <p class="wow fadeInDown" style="color: #000;">The blockchain file has size 578Mb.</p>
                         <h4 class="wow fadeInDown" style="color: #000;margin-top: 2em;font-size:20px;">Step 2: Unzip the flashcoin_blockchain_snapshot_*.tar.gz contain:</h4>
                         <p class="wow fadeInDown" style="color: #000;">The file contain:<br>
                           <code>.\blocks</code><br>
