--- a/our-team.html
+++ b/our-team.html
@@ -100,7 +100,7 @@
                         </div>
                         <div class="team-info">
                             <h3>Maulik Vora</h3>
-                            <span>Full Stack Developer</span>
+                            <span>Full Stack developer, Mobile Dev Lead</span>
                             <!-- <p class="wow fadeInDown" style="text-align: justify;">Maulik is computer engineering graduate from India. Having 10+ years of full stack experience in all stages of IT development. He manages the web, mobile and back-end development for FLASH wallets.</p> -->
                             <p class="wow fadeInDown" style="text-align: justify;">&nbsp;</p>
                         </div>
@@ -109,7 +109,7 @@
                 <div class="col-sm-6 col-md-3">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="200ms">
                         <div class="team-img zl-image-hover">
-                            <img src="images/placeholder-man.png" alt="">
+                            <img src="images/flash-placeholder.png" alt="">
 							<!-- <h3>Pahlwan</h3>
                             <span>Designer</span> -->
                         </div>
@@ -136,7 +136,7 @@
                 <div class="col-sm-6 col-md-3">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="100ms">
                         <div class="team-img zl-image-hover">
-                            <img src="images/placeholder-man.png" alt="">
+                            <img src="images/flash-placeholder.png" alt="">
 							          </div>
                         <div class="team-info">
                             <h3>David Nguyen</h3>
@@ -151,7 +151,7 @@
               <div class="col-sm-6 col-md-3">
                   <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="200ms">
                       <div class="team-img zl-image-hover">
-                          <img src="images/placeholder-man.png" alt="">
+                          <img src="images/flash-placeholder.png" alt="">
                       </div>
                       <div class="team-info">
                           <h3>Dr Tai</h3>
@@ -175,7 +175,7 @@
                 <div class="col-sm-6 col-md-3">
                     <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="100ms">
                         <div class="team-img zl-image-hover">
-                            <img src="images/placeholder-man.png" alt="">
+                            <img src="images/flash-placeholder.png" alt="">
 							<!-- <h3>Jane Man</h3>
                             <span>Project Manager</span> -->
                         </div>
@@ -201,6 +201,32 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+              <div class="col-sm-6 col-md-3">
+                  <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="200ms">
+                      <div class="team-img zl-image-hover">
+                          <img src="images/flash-placeholder.png" alt="">
+                      </div>
+                      <div class="team-info">
+                          <h3>Chintan Prajapati</h3>
+                          <span>Mobile Developer</span>
+                          <p class="wow fadeInDown" style="text-align: justify;">&nbsp;</p>
+                      </div>
+                  </div>
+              </div>
+                <div class="col-sm-6 col-md-3">
+                    <div class="team-member wow fadeInUp" data-wow-duration="400ms" data-wow-delay="0ms">
+                        <div class="team-img zl-image-hover">
+                            <img src="images/flash-placeholder.png" alt="">
+							           </div>
+                        <div class="team-info">
+                            <h3>Divyesh Kakrecha</h3>
+                            <span>Mobile Developer</span>
+                             <p class="wow fadeInDown" style="text-align: justify;">&nbsp;</p>
+                        </div>
+                    </div>
+                </div>
+              </div>
             <div class="section-header our-team">
                 <h2 class="section-title wow fadeInDown">Advisors</h2>
             </div>
