Minor text changes

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
                - Upgrade of exisitng Blockchain ecosystem<br>
                - Testnet launch of FLASH DPOW and GovNodes<br>
                - Adding new features to Merchant Services<br>
-               - Launch of Launch of Human Teller Machine ( HTM ) on Mobile App
+               - Launch of Human Teller Machine ( HTM ) on Mobile App
              </p>
              <time>FLASH Blockchain & Applications</time>
            </div>
