--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -54,7 +54,7 @@
                         <h4 class="wow fadeInDown" style="color: #000;margin-top: 2em;font-size:20px;">Step 2: Unzip the flashcoin_blockchain_snapshot_*.tar.gz contain:</h4>
                         <p class="wow fadeInDown" style="color: #000;">The file contain:<br>
                           <code>.\blocks</code><br>
-                          <code>.\chain</code><br>
+                          <code>.\chainstate</code><br>
                           <code>.\databases</code><br>
                           <code>.\peer.dat</code>
                         </p>
