Minor text changes

--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
                 - Launch of FLASH Web Wallet 2.0<br>
 		- Hardware Wallet support<br>
 		- Introducing FLASH SWAP<br>
-    - Launch of Launch of Human Teller Machine on FLASH Web Wallet
+    - Launch of Human Teller Machine on FLASH Web Wallet
              </p>
              <time>FLASH Wallets</time>
            </div>
