minor note changes

--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
                 </div>
             </div>
         </div>
-        <br><br>
-        <p style="color: #fff;text-align: center;"><strong>Please note:</strong> We plan to move to decentralized DPOW and governance model in Q2 2018 and will release the new version of whitepaper for the same in Q1 2018 as mentioned in our roadmap.</p>
+        <!--<br><br>
+        <p style="color: #fff;text-align: center;"><strong>Please note:</strong> We plan to move to decentralized DPOW and governance model in Q2 2018 and will release the new version of whitepaper for the same in Q1 2018 as mentioned in our roadmap.</p>-->
     </section>
 
 	 <section id="team">
@@ -626,7 +626,7 @@
                 </p>
             </div></div>
             </div>
-            <!-- <div class="row"><div class="col-xs-12 text-center">Please Note: Roadmap will be updated on regular basis as we make progress.</div></div> -->
+            <div class="row"><div class="col-xs-12 text-center">Please Note: Roadmap will be updated on regular basis as we make progress.</div></div>
         </div>
     </section>
     <!--/#blog-->
