--- a/our-team.html
+++ b/our-team.html
@@ -208,7 +208,7 @@
                           <img src="images/flash-placeholder.png" alt="">
                       </div>
                       <div class="team-info">
-                          <h3>Chintan Prajapati</h3>
+                          <h3>Chintan P</h3>
                           <span>Mobile Developer</span>
                           <p class="wow fadeInDown" style="text-align: justify;">&nbsp;</p>
                       </div>
@@ -220,7 +220,7 @@
                             <img src="images/flash-placeholder.png" alt="">
 							           </div>
                         <div class="team-info">
-                            <h3>Divyesh Kakrecha</h3>
+                            <h3>Divyesh K</h3>
                             <span>Mobile Developer</span>
                              <p class="wow fadeInDown" style="text-align: justify;">&nbsp;</p>
                         </div>
