FLASH is now supprted on ETHOS walelt

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                         <div class="media service-box">
                             <div class="media-body wallet" data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine">
                                 <h2 class="media-heading">Wallets</h2>
-                                <p style="color: #000">FLASH supports a number of online wallets including Coinomi, Coin Payments, QT (Window, Mac, Linux) and an easy to use online wallet designed for the mass consumer market. If you can make online payments, you already know how to use FLASH.</p>
+                                <p style="color: #000">FLASH supports a number of online wallets including Coinomi, Coin Payments, ETHOS, QT (Window, Mac, Linux) and an easy to use online wallet designed for the mass consumer market. If you can make online payments, you already know how to use FLASH.</p>
                             </div>
                         </div>
                     </div><!--/.col-md-6-->
@@ -308,6 +308,7 @@
                                <div class="row">
                 									<div class="col-sm-6 zl-image-hover"><a href="https://coinomi.com/" target="_blank"><img src="images/about-flash-img-1.png" alt="img"></a></div>
                 									<div class="col-sm-6 zl-image-hover"><a href="https://www.coinpayments.net/" target="_blank"><img src="images/about-flash-img-2.png" alt="img"></a></div>
+                                  <div class="col-sm-12 zl-image-hover text-center"><a href="https://www.ethos.io/" target="_blank"><br><img src="images/ETHOS-wallet-supports-FLASH.png" alt="ETHOS wallet supports FLASH"></a></div>
                                </div>
                         </div>
                     </div><!--/.col-md-6-->
