--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -133,11 +133,10 @@
 									<li><a href="https://nodes.flashcoin.io/" target="_blank"><div>NODES</div></a></li>
 								</ul>
 							</li>
-							<li><a href="index.html#social-forum"><div>COMMUNITIES</div></a>
-								<ul>
-									<li><a href="index.html#social-forum"><div>SOCIAL FORUMS</div></a></li>
-									<li><a href="https://blog.flashcoin.io/" target="_blank"><div>BLOG</div></a></li>
-								</ul>
+							<li>
+								<a href="index.html#social-forum">
+									<div>COMMUNITIES</div>
+								</a>
 							</li>
 
 						</ul>
