--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -112,6 +112,7 @@
 									<li><a href="index.html#roadmap"><div>ROADMAP</div></a></li>
 									<li><a href="index.html#news"><div>NEWS</div></a></li>
 									<li><a href="index.html#exchanges"><div>EXCHANGES</div></a></li>
+									<li><a href="index.html#partners"><div>PARTNERS</div></a></li>
 									<li><a href="index.html#feature-flash"><div>UPCOMING FEATURES</div></a></li>
 								</ul>
 							</li>
