--- a/our-team.html
+++ b/our-team.html
@@ -149,6 +149,7 @@
 												<div>EXCHANGES</div>
 											</a>
 										</li>
+										<li><a href="index.html#partners"><div>PARTNERS</div></a></li>
 										<li>
 											<a href="index.html#feature-flash">
 												<div>UPCOMING FEATURES</div>
