--- a/index.html
+++ b/index.html
@@ -794,8 +794,8 @@
 														<img src="images/icons/icon_linux.png" />
 													</div>
 													<h3>Linux</h3>
-													<a href="downloads/Flashcoin-x86_64-unknown-linux-gnu.tar">64 Bit</a><br />
-													<a href="downloads/Flashcoin-arm-linux-gnueabihf.tar">Arm</a><br />
+													<a href="downloads/Flashcoin-x86_64-unknown-linux-gnu.tar.gz">64 Bit</a><br />
+													<a href="downloads/Flashcoin-arm-linux-gnueabihf.tar.gz">Arm</a><br />
 												</div>
 											</div>
 											<div class="col-lg-3 col-md-6 col-sm-6 col-padding">
@@ -879,7 +879,6 @@
 									<li><a href="https://discord.gg/2nFmMqA" target="_blank"><i class="fab fa-discord"></i><span>Discord</span></a></li>
 									<li><a href="https://t.me/joinchat/C5go9ExsGGNeVvForEgb6w" target="_blank"><i class="fab fa-telegram"></i><span>Telegram</span></a></li>
 									<li><a href="https://medium.com/@FlashCoin" target="_blank"><i class="fab fa-medium"></i><span>Medium</span></a></li>
-									<li><a href="https://www.facebook.com/FlashCoin-1800026016723751" target="_blank"><i class="fab fa-facebook"></i><span>Facebook</span></a></li>
 									<li><a href="https://www.instagram.com/flashcoin.io/" target="_blank"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>
 									<li><a href="https://twitter.com/FlashCoins" target="_blank"><i class="fab fa-twitter"></i><span>Twitter</span></a></li>
 									<li><a href="https://plus.google.com/u/0/b/110236490072104998071/110236490072104998071" target="_blank"><i class="fab fa-google-plus"></i><span>Google+</span></a></li>
