--- a/flash-snapshot.html
+++ b/flash-snapshot.html
@@ -83,8 +83,8 @@
 									<li><i class="icon-play"></i> If your blockchain was crashed and you need get it back to normal fast</li>
 								</ul>
 								<h2>Step 1: Download flashcoin_blockchain_snapshot file:</h2>
-								<a href="download/flashcoin_blockchain_snapshot_29mar2018.tar.gz" class="button button-3d bottommargin-sm">Download</a>
-								<p>(<a href="download/flashcoin_blockchain_snapshot_29mar2018.tar.gz">https://flashcoin.io/download/flashcoin_blockchain_snapshot_29mar2018.tar.gz</a>)<br>
+								<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot_29mar2018.tar.gz" class="button button-3d bottommargin-sm">Download</a>
+								<p>(<a href="https://flashcoin.io/downloads/flashcoin_blockchain_snapshot_29mar2018.tar.gz">https://flashcoin.io/downloads/flashcoin_blockchain_snapshot_29mar2018.tar.gz</a>)<br>
                           		(SHA1: 1b897b2ecbbefdfa8d5411d9bc46e9971602c370)</p>
 								<p>The blockchain file has size 578Mb.</p>
 
