--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
 	<!-- Logo
 	============================================= -->
 	<div id="logo" style="display: inline;">
-		<a href="index.html" class="standard-logo retina-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo.png" alt="Flashcoin Logo"></a>
+		<a href="index.html" class="standard-logo retina-logo" data-dark-logo="images/logo-dark.png"><img src="images/logo-dark.png" alt="Flashcoin Logo"></a>
 	</div><!-- #logo end -->
 
 	<!-- Primary Navigation
