--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
 
 							<ul>
 								<li class="hide-this">
-									<a href="#" data-scrollto="#wrapper">
+									<a href="#" data-scrollto="#wrapper" data-home="home">
 										<div>HOME</div>
 									</a>
 								</li>
@@ -145,33 +145,33 @@
 										<div>COMMUNITIES</div>
 									</a>
 								</li>
-								<!-- <li>
+								<li>
 									<a href="#" data-href="">
 										<div>Docs</div>
 									</a>
 									<ul>
 										<li>
-											<a href="https://dev03landing.flashcoin.io/guides.html" target="_blank">
-												<div>How to use FLASH Web Wallet</div>
+											<a href="guides.html">
+												How to use FLASH Web Wallet
 											</a>
 										</li>
 										<li>
-											<a href=" https://dev03landing.flashcoin.io/guides3.html" target="_blank">
+											<a href="guides3.html">
 												<div>How to use FLASH QT Wallet</div>
 											</a>
 										</li>
 										<li>
-											<a href="https://dev03landing.flashcoin.io/guides2.html" target="_blank">
+											<a href="guides2.html">
 												<div>How to Buy Bitcoin using Coinbase</div>
 											</a>
 										</li>
-										<li>
+										<!-- <li>
 											<a href="https://dev03landing.flashcoin.io/tutorials.html" target="_blank">
 												<div>Video Tutorials</div>
 											</a>
-										</li>
+										</li> -->
 									</ul>
-								</li> -->
+								</li>
 							</ul>
 
 						</nav>
