--- a/our-team.html
+++ b/our-team.html
@@ -118,7 +118,7 @@
 														<div class="col-md-3 col-sm-3 bottommargin">
 															<div class="team">
 																<div class="team-image">
-																	<img src="images/team/dipak_kumar.jpg" alt="Deepak Kumar">
+																	<img src="images/team/deepak-kumar.png" alt="Deepak Kumar">
 																</div>
 																<div class="team-desc team-desc-bg">
 																	<div class="team-title">
