--- a/header.html
+++ b/header.html
@@ -39,11 +39,11 @@
 												<div>FLASH ADVANTAGES</div>
 											</a>
 										</li>
-										<li>
+										<!-- <li>
 											<a href="#" data-href="#governance-model">
 												<div>GOVERNANCE MODEL</div>
 											</a>
-										</li>
+										</li> -->
 										<li>
 											<a href="#" data-href="#team">
 												<div>TEAM</div>
@@ -165,11 +165,11 @@
 												<div>How to Buy Bitcoin using Coinbase</div>
 											</a>
 										</li>
-										<!-- <li>
-											<a href="https://dev03landing.flashcoin.io/tutorials.html" target="_blank">
+										<li>
+											<a href="tutorials.html">
 												<div>Video Tutorials</div>
 											</a>
-										</li> -->
+										</li>
 									</ul>
 								</li>
 							</ul>
