--- a/our-team.html
+++ b/our-team.html
@@ -6,19 +6,19 @@
 		<link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="description" content="FLASH is ideal for exchanges, as the transfer speeds and transaction costs are very low and because it is based on LTC, integration." />
-		<link rel="canonical" href="ttps://www.flashcoin.io/index.html" />
+		<link rel="canonical" href="https://www.flashcoin.io/our-team.html" />
 		<meta itemprop="name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH.">
-		<meta itemprop="description" content="CONNECTING THE WORLD IN A FLASH via @FlashCoins #FlashCoin #GoFaster">
-		<meta itemprop="image" content="ttps://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg">
+		<meta itemprop="description" content="CONNECTING THE WORLD IN A FLASH. FLASHCOIN Team">
+		<meta itemprop="image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg">
 		<meta property="og:site_name" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
 		<meta property="og:type" content="article" />
 		<meta property="og:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
-		<meta property="og:url" content="ttps://www.flashcoin.io/index.html" />
-		<meta property="og:description" content="CONNECTING THE WORLD IN A FLASH via @FlashCoins #FlashCoin #GoFaster" />
-		<meta property="og:image" content="ttps://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+		<meta property="og:url" content="https://www.flashcoin.io/index.html" />
+		<meta property="og:description" content="CONNECTING THE WORLD IN A FLASH. FLASHCOIN Team" />
+		<meta property="og:image" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
 		<meta name="twitter:title" content="#GoFaster | FlashCoin.  CONNECTING THE WORLD IN A FLASH." />
-		<meta name="twitter:description" content="CONNECTING THE WORLD IN A FLASH. via @FlashCoins #FlashCoin #GoFaster" />
-		<meta name="twitter:image:src" content="ttps://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
+		<meta name="twitter:description" content="CONNECTING THE WORLD IN A FLASH. FLASHCOIN Team" />
+		<meta name="twitter:image:src" content="https://www.flashcoin.io/images/social-fb-plate-flashcoin.jpg" />
 		<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600|Open+Sans|Roboto" rel="stylesheet">
 		<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
 		<link rel="stylesheet" href="css/04.style.css" type="text/css" />
