--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					<!-- #section-about-flash-advantage end -->
 					<!-- The FLASH Governance Model
 				============================================= -->
-					<div id="governance-model" class="page-section topmargin-sm">
+				<!--	<div id="governance-model" class="page-section topmargin-sm">
 
 						<div class="fancy-title title-border title-center">
 							<h1><span>The FLASH Governance Model</span></h1>
@@ -222,7 +222,6 @@
         <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-easing="linear" data-aos-duration="3000">
 			<div class="row">
 				<div class="col-sm-4">
-					<!-- <h4 class="section-title wow fadeInDown"></h4>	 -->
 					<p class="wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">FLASH GovNodes are another unique and streamlined feature of FLASH that we think will help keep FLASH as a friendly and “low tax” zone for crypto.</p>
 					<div class="text-center img-padding hover"><img src="images/governance_Model/circle.png" alt="img"></div>
 					<p class="wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;">- There will be 151 FLASH GovNodes (Governance Nodes) operated by FLASH Delegates. These govern the FLASH blockchain and software.</p>
@@ -244,8 +243,7 @@
 			</div>
 			<h4 class="section-title wow fadeInDown text-center animated" style="visibility: visible; animation-name: fadeInDown;">For more information or to get a GovNode, please email to: <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io.</a></h4>
             </div>
-        <!--/.container-->
-        </div>
+			</div> -->
 
 					<!-- #section-about-The FLASH Governance Model end -->
 
