ernetto rassi partner image changed

--- a/our-partners.html
+++ b/our-partners.html
@@ -154,7 +154,7 @@
                   <div class="partners">
                   <a href="http://ernestorassi.com/" target="_blank">
                     <div class="team-image">
-                        <img src="images/partners_logo/ernesto-rassi.png" alt="Ernesto Rassi">
+                        <img src="images/partners_logo/ernetto-rassi.jpg" alt="Ernesto Rassi">
                     </div>
                     <div class="team-desc">
                       <div class="partners-title">
