--- a/our-team.html
+++ b/our-team.html
@@ -274,7 +274,7 @@
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/stack.png" alt="stack">
+											<img src="images/team/stack.jpg" alt="stack">
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
