--- a/our-team.html
+++ b/our-team.html
@@ -271,18 +271,7 @@
 						<div class="container clearfix">
 							<!--Stack -->
 							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
-								<div class="col-md-3 col-sm-3 bottommargin">
-									<div class="team">
-										<div class="team-image">
-											<img src="images/team/stack.jpg" alt="stack">
-										</div>
-										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Stack</h4><span>Community Leader</span></div>
-										</div>
-									</div>
-								</div>
-								<!--Stack end-->
+
 								<!--Aaron Hockett-->
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
@@ -291,11 +280,23 @@
 										</div>
 										<div class="team-desc team-desc-bg">
 											<div class="team-title">
-												<h4>Aaron Hockett</h4><span>Community Leader</span></div>
+												<h4>Aaron Hockett</h4><span>Principle Community Leader <br> <a href="https://www.linkedin.com/in/aaron-hockett-3b874510/" target="_blank"><i class="fab fa-linkedin" style="font-size: 18px !important;"></i></a></span></div>
 										</div>
 									</div>
 								</div>
 								<!--Aaron Hockett end-->
+								<div class="col-md-3 col-sm-3 bottommargin">
+									<div class="team">
+										<div class="team-image">
+											<img src="images/team/stack.jpg" alt="stack">
+										</div>
+										<div class="team-desc team-desc-bg">
+											<div class="team-title">
+												<h4>Stack</h4><span>Volunteer Community Leader</span></div>
+										</div>
+									</div>
+								</div>
+								<!--Stack end-->
 								<!--insurgus-->
 								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
