Updated team info

--- a/our-team.html
+++ b/our-team.html
@@ -273,7 +273,7 @@
 							<!--Aaron Hockett-->
 							<div class="row topmargin-lg divcenter" style="max-width: 1000px;">
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
-								<div class="team">
+								<div class="team community-leader">
 										<div class="team-image">
 											<img src="images/team/aaron.jpg" alt="Aaron Hockett">
 										</div>
@@ -286,7 +286,7 @@
 								<!--Aaron Hockett end-->
 								<!--Stack -->
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
-									<div class="team">
+									<div class="team community-leader">
 										<div class="team-image">
 											<img src="images/team/stack.jpg" alt="stack">
 										</div>
@@ -300,7 +300,7 @@
 								<!--Stack end-->
 								<!--samsungthedefender-->
 								<div class="col-md-4 col-sm-4 bottommargin community-leaders">
-									<div class="team">
+									<div class="team community-leader">
 										<div class="team-image">
 											<img src="images/team/no-photo.jpg" alt="Samsungthedefender">
 										</div>
@@ -329,28 +329,29 @@
 								<div class="col-md-2 col-sm-2 bottommargin">
 								</div>
 								<!--Aaron Hockett end-->
-								<!--Oddsbrah -->
-								<div class="col-md-4 col-sm-4 bottommargin community-volunteers">
+								<!--Gabriel M. -->
+								<div class="col-md-3 col-sm-3 bottommargin community-volunteers">
 									<div class="team">
 										<div class="team-image">
-											<img src="images/team/no-photo.jpg" alt="Insurgus">
+											<img src="images/team/gabriel.png" alt="Gabriel M.">
 										</div>
 										<div class="team-desc team-desc-bg">
-											<div class="team-title">
-												<h4>Oddsbrah</h4><span>Community Volunteer</span></div>
+											<div class="team-title volunteers-title">
+												<h4>Gabriel M.</h4><span>Community Volunteer</span></div>
 										</div>
 									</div>
 								</div>
-								
+								<div class="col-md-2 col-sm-2 bottommargin">
+								</div>
 								<!--Oddsbrah end-->
 								<!--Matt CryptoViking O.-->
-								<div class="col-md-4 col-sm-4 bottommargin community-volunteers">
+								<div class="col-md-3 col-sm-3 bottommargin">
 									<div class="team">
 										<div class="team-image">
 											<img src="images/team/no-photo.jpg" alt="Samsungthedefender">
 										</div>
 										<div class="team-desc team-desc-bg">
-											<div class="team-title">
+											<div class="team-title volunteers-title">
 												<h4>Matt CryptoViking O.</h4><span>Community Volunteer</span></div>
 										</div>
 									</div>
